fix: disable "Restore defaults" in view visibility menu when in default state

--- a/packages/genome-spy/src/styles/genome-spy-app.scss
+++ b/packages/genome-spy/src/styles/genome-spy-app.scss
@@ -261,8 +261,14 @@ $font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         }
     }
 
-    a:first-child {
+    a:first-child,
+    span.disabled-item {
+        display: block;
         padding: 4px $vPadding;
+    }
+
+    span.disabled-item {
+        color: #b0b0b0;
     }
 
     a {
